# boost-dbus

./: CMakeLists.txt  Jenkinsfile  README.md  groups  project.config
include/dbus/: connection.hpp  connection_service.hpp  element.hpp  message.hpp  properties.hpp
include/dbus/detail/: async_send_op.hpp  queue.hpp
include/dbus/impl/: connection.ipp
test/: avahi.cpp  dbusPropertiesServer.cpp  message.cpp
